MonetDB5/src/mal/Tests/tst902.stable.out
stdout of test 'tst902` in directory 'src/mal` itself:
# Monet Database Server V5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet5/Linux/var/MonetDB/dbfarm
# dbname:demo
# Visit http://monetdb.cwi.nl for further information.
## what is the overhead of MAL in multiplex situations
## using a BATloop !! This is 40x slower as the V4.3 multiplex implementation
#b:= new(:lng,:lng);
#i:= -1:lng;
#barrier v:= nextElement(i,0:lng,10:lng,1:lng);
#	insert(b,i,i);
#	redo v:= nextElement(i,0:lng,10:lng,1:lng);
#exit v;
#c:= copy(b);
#
#d:= new(:lng,:lng);
#barrier w:= bunStream(b,h:lng,t:lng);
#	B1:= find(b,h);
#	B2:= find(c,h);
#	t:= B1+B2;
#	insert(d,h,t);
#	redo w:= bunStream(b,h:lng,t:lng);
#catch 	GDKerror;
#exit	GDKerror;
#exit w;
#print(d);
#
function Admin.main():int;	# 0  (main:int)
    b := bbp.new(:lng,:lng);	# 1 CMDBATnew (b:bat[:lng,:lng])<-($2:lng)($3:lng)
barrier (k,v):= mal.newRange(0);	# 2 RNGnewRange_lng (k:bit)(v:lng)<-($6:lng) jump 5
    bat.insert(b,v,v);	# 3 BKCinsert_bun ($7:void)<-(b:bat[:lng,:lng])(v:lng)(v:lng)
    redo (k,v):= mal.nextElement(1,10);	# 4 RNGnextElement_lng (k:bit)(v:lng)<-($8:lng)($9:lng) jump 3
exit (k,v);	# 5  (k:bit)(v:lng)
    c := algebra.copy(b);	# 6 ALGcopy (c:bat[:lng,:lng])<-(b:bat[:lng,:lng])
    d := bbp.new(:lng,:lng);	# 7 CMDBATnew (d:bat[:lng,:lng])<-($12:lng)($13:lng)
barrier (w,h,t):= chopper.newIterator(b);	# 8 CHPbunIterator (w:lng)(h:lng)(t:lng)<-(b:bat[:lng,:lng]) jump 16
    B1 := algebra.find(b,h);	# 9 ALGfind (B1:lng)<-(b:bat[:lng,:lng])(h:lng)
    B2 := algebra.find(c,h);	# 10 ALGfind (B2:lng)<-(c:bat[:lng,:lng])(h:lng)
    t := calc.+(B1,B2);	# 11 CALCbinaryADDlnglng (t:lng)<-(B1:lng)(B2:lng)
    bat.insert(d,h,t);	# 12 BKCinsert_bun ($19:void)<-(d:bat[:lng,:lng])(h:lng)(t:lng)
    redo (w,h,t):= chopper.hasMoreElements(b);	# 13 CHPbunHasMoreElements (w:lng)(h:lng)(t:lng)<-(b:bat[:lng,:lng]) jump 9
catch GDKerror;	# 14  (GDKerror:any) jump 15
exit GDKerror;	# 15  (GDKerror:any)
exit w;	# 16  (w:lng)
    io.print(d);	# 17 IOprint_val ($21:int)<-(d:bat[:lng,:lng])
end main;	# 18  
#-----------------#
# h	tmp_5	  # name
# lng	lng	  # type
#-----------------#
[ 0,	  0	  ]
[ 1,	  2	  ]
[ 2,	  4	  ]
[ 3,	  6	  ]
[ 4,	  8	  ]
[ 5,	  10	  ]
[ 6,	  12	  ]
[ 7,	  14	  ]
[ 8,	  16	  ]
[ 9,	  18	  ]
>